--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,9 @@
   --spacing-08: 2.5rem;
   --spacing-09: 3rem;
   --spacing-10: 4rem;
+  --spacing-11: 5rem;
+  --spacing-12: 6rem;
+  --spacing-13: 7rem;
 }
 
 @keyframes lineLoop-animation {
@@ -224,8 +227,8 @@ a:focus-visible {
   font-style: italic;
 }
 
-.small {
-  font-size: 1.25rem;
+.small-font {
+  font-size: 1rem;
 }
 
 .label {
@@ -342,7 +345,31 @@ a:focus-visible {
 }
 
 .margin-bottom-10 {
-  margin-bottom: var(--spacing-10);
+  margin-top: var(--spacing-10);
+}
+
+.margin-top-11 {
+  margin-top: var(--spacing-11);
+}
+
+.margin-bottom-11 {
+  margin-bottom: var(--spacing-11);
+}
+
+.margin-top-12 {
+  margin-top: var(--spacing-12);
+}
+
+.margin-bottom-12 {
+  margin-bottom: var(--spacing-12);
+}
+
+.margin-top-13 {
+  margin-top: var(--spacing-13);
+}
+
+.margin-bottom-13 {
+  margin-bottom: var(--spacing-13);
 }
 
 .tooltip {
