--- a/src/style/switchStyle.css
+++ b/src/style/switchStyle.css
@@ -2,6 +2,7 @@
   border: 2px solid var(--dark-red) !important;
   background-color: var(--gray-100) !important;
   height: 26px !important;
+  padding: 0 !important;
 }
 
 .undp-switch.ant-switch-checked {
@@ -9,6 +10,6 @@
 }
 
 .undp-switch  .ant-switch-handle::before{
-  background-color: var(--dark-red);
+  background-color: var(--dark-red) !important;
   box-shadow: none !important;
 }
